[package]
name = "mserver"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
markdown = "0.3"
directories = "4.0.1"
toml = "0.5.8"
serde = { version = "1.0.132", features = ["derive"] }
daemonize = "0.4.1"
httparse = "1.5.1"
termion = "1.5.6"
clap = { version = "3.1.8", features = ["derive"] }
rocket = "0.5.1"
anyhow = "1.0.89"
